<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Paynet</string>
    <string name="forget_pin">Забыли PIN-код?</string>
    <string name="phone">Номер вашего телефона</string>
    <string name="enter_pin">Введите PIN-код</string>
    <string name="create_pin">Придумайте PIN-код</string>
    <string name="confirm_pin">Повторите PIN-код</string>
    <string name="language">Язык</string>
    <string name="enter_phone">Введите ваш номер</string>
    <string name="for_client">чтобы войти или стать клиентом</string>
    <string name="continue_btn">Продолжить</string>
    <string name="send_new_code">Отправить новый код</string>
    <string name="enter_code">Введите код из смс</string>
    <string name="sent_it_to">Мы отправили на </string>
    <string name="home">Главный</string>
    <string name="transfer">Переводы</string>
    <string name="payment">Оплата</string>
    <string name="history">История</string>
    <string name="my_balance">Мои деньги</string>
    <string name="money">сум</string>
    <string name="add_m">Пополнить</string>
    <string name="transfer_m">Перевести</string>
    <string name="payment_m">Оплатить</string>
    <string name="pynet_card">Paynet-карта</string>
    <string name="what_it">Что это?</string>
    <string name="your_stage">Ваш уровень: Начинающий</string>
    <string name="coin">монеток</string>
    <string name="next_stage">Осталось 100 до следующего уровня</string>
    <string name="exchange">Обменять</string>
    <string name="security_paynet">Безопасность в Paynet</string>
    <string name="security">Хотите повысить безопасность?</string>
    <string name="be_secured">Подтвердите личность</string>
    <string name="about_avia">Выгодно и надёжно</string>
    <string name="buy_avia">Купить билет</string>
    <string name="my_home">Мой дом</string>
    <string name="pay_for_home">Платите за свет, газ и связь вовремя</string>
    <string name="add_home">Создать дом</string>
    <string name="know_about">Узнай задолженность</string>
    <string name="know_about_mib">по налогам и МІВ в приложении</string>
    <string name="kash">Кешбэк-счет</string>
    <string name="balance">Баланс</string>
    <string name="today">Сегодня</string>
    <string name="my_card">Мои карты</string>
    <string name="add_card">Добавить карту</string>
    <string name="card_or_phone">Карта</string>
    <string name="to_my_card">На свою карту</string>
    <string name="to_paynet_card">Ha Paynet-карту</string>
    <string name="templates">Шаблоны</string>
    <string name="add">Добавить</string>
    <string name="international_transfer">Международные переводы</string>
    <string name="to_ru">В Россию</string>
    <string name="to_uz">В Узбекистан</string>
    <string name="profile">Профиль</string>
    <string name="log_out">Выйти из профиля</string>
    <string name="rate_app">Оценить приложение</string>
    <string name="settings">Настройки приложения</string>
    <string name="reference">Справка</string>
    <string name="about">0 Paynet</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="call_support">Позвонить в поддержку</string>
    <string name="chat_assistant">Чат-ассистент</string>
    <string name="support">Поддержка</string>
    <string name="useful">Полезное</string>
    <string name="about_paynet">Компания "UZPAYNET" действует на рынке Узбекистана с 2005 года. За этот период было подключено более 1500 поставщиков различных услуг, которые можно оплатить через мобильное приложение "Paynet Qulay Pul" и в любом из 24000 пунктов приема платежей по всей Республике.</string>
    <string name="paynet_kompany">Компания не останавливается на достигнутых результатах, развиваясь и расширяя линейку предоставляемых услуг.</string>
    <string name="offer">Оферта</string>
    <string name="offer_bonus_card">Оферта бонусной карты Paynet</string>
    <string name="offer_system">Оферта об использовании системы электронных денег Paynet</string>
    <string name="how_paynet">Как вам Paynet?</string>
    <string name="we_listen_you">Мы внимательно читаем все отзывы, чтобы улучшать приложение</string>
    <string name="all_succes">Все хорошо</string>
    <string name="bad">Что-то не так</string>
    <string name="notification">Уведомления</string>
    <string name="app_lang">Язык приложения</string>
    <string name="for_update_pin">Для восстановления PIN-кода вам потребуется заново войти в профиль.</string>
    <string name="log_out_pin">Выйти</string>
    <string name="map">Офисы</string>
    <string name="map_office">Офисы Paynet</string>
    <string name="your_status">Ваш статус</string>
    <string name="anonim">Анонимный</string>
    <string name="change_status">Подтвердить личность</string>
    <string name="add_ru_card">Карту России</string>
    <string name="add_uz_card">Карту Узбекистана</string>
    <string name="how_type_card_add">Какую карту добавить?</string>
    <string name="delete_card_d">Вы точно хотите удалить карту?</string>
    <string name="yes">Удалить</string>
    <string name="no">Отменить</string>
    <string name="log_out_d">Вы хотите выйти из аккаунта?</string>
    <string name="log_out_">Выйти</string>
    <string name="add_card_screen">Добавление карты</string>
    <string name="mm_yy">мм/гг</string>
    <string name="card_number">Номер карты</string>
    <string name="date_card_fail">Неверный срок действия карты</string>
    <string name="card_number_fail">Такая цифровая карта не включена в базу данных.</string>
    <string name="card_settings">Настройки</string>
    <string name="style_and_name">Стиль и название карты</string>
    <string name="delete_card">Удалить карту</string>
    <string name="transfer_to_card">Перевод на карту</string>
    <string name="from">Откуда</string>
    <string name="to">Куда</string>
    <string name="you_transfer">Вы переводите</string>
    <string name="my_cards">Мои карты</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="paynet">Paynet</string>
    <string name="_12444_sum">12444 sum</string>
    <string name="_15_04_2025">15/04/2024</string>
    <string name="_137_sum">137 sum</string>
    <string name="_1757_sum">1757 sum</string>
    <string name="moneys">Курсы валют</string>
    <string name="app_set">Настройки приложения</string>
    <string name="app_security">Безопасность</string>
    <string name="change_pin">Изменить PIN-код</string>
    <string name="touch">Touch ID</string>
    <string name="users">Устройства</string>
    <string name="what_is_paynet_card">Что такое Paynet-карта?</string>
    <string name="transfer_with_out_commission">Пополняйте и переводите деньги без комиссии.</string>
    <string name="fill_and_transfer">Пополняйте и переводите деньги без комиссии.</string>
    <string name="_0_percentage_for_fill">0% на пополнения</string>
    <string name="offer_for_fill">У агента Paynet, в инфокиоске или с банковской карты в приложении</string>
    <string name="_0_percentage_for_transfer">0% на переводы</string>
    <string name="to_other_paynet_cards">На другие карты Paynet</string>
    <string name="cash_withdrawal">Снятие наличных</string>
    <string name="in_paynet_agent">У агента Paynet</string>
    <string name="card_payments">Платежи с картой</string>
    <string name="card_payment_options">Любой из 1000 сервисов Paynet можно оплатить через Paynet-карту</string>
    <string name="cashback_to_2_2">Кешбэк до 2,2%</string>
    <string name="fill_cashback_after_transfer">Получайте кешбэк при оплате с Paynet-картой на ваш кешбэк-счет</string>
    <string name="know_contract">Узнать лимиты и условия</string>
    <string name="we_cant_find">Мы не нашли такую карту</string>
    <string name="card_number_wrong">Возможно, есть ошибка в номере</string>
    <string name="transfer_percent">Комиссия</string>
    <string name="amount_is_less">Недостаточно средств</string>
    <string name="card">Карты</string>
    <string name="code_icnt_correct">Неверный код</string>
    <string name="transfer_success">Перевод отправлен</string>
    <string name="transferDetails">Детали перевода</string>
    <string name="add_shablon">Добавить в шаблон</string>
    <string name="done">Выполнено</string>
    <string name="success">Готово</string>
    <string name="card_style">Стиль и название карты</string>
    <string name="card_name">Название карты</string>
    <string name="limit_symbols">6 / 15 символов</string>
    <string name="last">Последние</string>
    <string name="delete_all">Очистить</string>
    <string name="delete_user">Удалить получателя</string>
    <string name="ac_delete">Вы действительно хотите удалить всех последних получателей?</string>
    <string name="error_to_my">Вы не можете переводить на ту же карту</string>
    <string name="not_connected">Нет соединения  к интернету!</string>
    <string name="refresh">Обновить</string>
    <string name="no_con_desc">Произошла ошибка при подключении. \n Повторите попытку.</string>
    <string name="select_card">Выберите карту</string>
    <string name="add_my_datas">Ввести данные вручную</string>
    <string name="enter_data">Заполните данные</string>
    <string name="enter_name">Введите имя</string>
    <string name="enter_last">Введите фамилию</string>
    <string name="enter_born_date">Введите дату рождение</string>
    <string name="error_date">Неправильный формат даты</string>
    <string name="error_first">Длина имени должно быть не менее 4 букв</string>
    <string name="error_last">Длина фамилии должно быть не менее 4 букв</string>
</resources>