<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_widget"
    android:id="@+id/root"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:elevation="4dp"
                android:src="@drawable/app_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/paynet"
                android:textSize="16sp"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/pnfont_semibold"
                android:textColor="@color/black"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/text_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_15_04_2025"
            android:textSize="16sp"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/pnfont_semibold"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:src="@drawable/ic_usa"/>

            <TextView
                android:id="@+id/text_usa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/pnfont_semibold"
                android:text="@string/_12444_sum"
                android:textColor="@color/black"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:src="@drawable/iz_ru"/>

            <TextView
                android:id="@+id/text_ru"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/pnfont_semibold"
                android:text="@string/_137_sum"
                android:textColor="@color/black"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:src="@drawable/ic_china"/>

            <TextView
                android:id="@+id/text_china"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/pnfont_semibold"
                android:text="@string/_1757_sum"
                android:textColor="@color/black"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>